# docs/swagger.json
@@ -560,7 +560,7 @@
                 }
             }
         },
-        "/community/applicants/action": {
+        "/communities/applicants/action": {
             "post": {
                 "security": [
                     {
@@ -620,7 +620,7 @@
                 }
             }
         },
-        "/community/projects": {
+        "/communities/projects": {
             "get": {
                 "security": [
                     {
@@ -666,7 +666,7 @@
                 }
             }
         },
-        "/community/projects/{id}/applicants": {
+        "/communities/projects/{id}/applicants": {
             "get": {
                 "security": [
                     {
